# pcbparts-mcp

./: .gitignore  CLAUDE.md  Dockerfile  FIXES_ISSUE_1_2.md  README.md  pyproject.toml
.github/workflows/: scrape-components.yml
data/: manifest.json  subcategories.json
landing/: index.html  llms.txt
scripts/: build_database.py  generate_key_attributes.py  scrape_components.py  verify_scrape_feasibility.py
src/jlcpcb_mcp/: __init__.py  alternatives.py  bom.py  client.py  config.py  db.py  key_attributes.py  manufacturer_aliases.py  mounting.py  parsers.py  server.py  smart_parser.py  subcategory_aliases.py
src/jlcpcb_mcp/db/: __init__.py  attributes.py  categories.py  connection.py  lookup.py
src/jlcpcb_mcp/search/: __init__.py  engine.py  query_builder.py  resolvers.py  spec_filter.py
src/jlcpcb_mcp/smart_parser/: __init__.py  mapping.py  models.py  packages.py  parser.py  semantic.py  types.py  values.py
src/pcbparts_mcp/: client.py  config.py  cse.py  server.py
src/pcbparts_mcp/db/: __init__.py  categories.py
tests/: test_alternatives.py  test_bom.py  test_client.py  test_db.py  test_distributors.py  test_fixes_issue_1_2.py  test_mounting.py  test_parsers.py  test_pinout.py
