[project]
name = "jlcpcb-mcp"
version = "2.2.0"
description = "MCP server for searching JLCPCB electronic components"
requires-python = ">=3.11"
dependencies = [
    # MCP SDK and FastMCP framework
    "mcp>=1.3.0",
    "fastmcp>=2.0.0",
    # HTTP client with browser impersonation (TLS fingerprinting)
    "curl_cffi>=0.7.0",
    # ASGI server and middleware
    "uvicorn[standard]",
    "starlette",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jlcpcb_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
